working with views

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
-<a href="/name">New Game</a>
+<form action="/">
+  <b>Welcome to Battleships!</b> <br />
+  Player 1, what's your name?
+  <input type="text" name="name">
+  <input type="submit" value="Submit">
+</form>
