--- a/views/newgame.erb
+++ b/views/newgame.erb
@@ -1,19 +1,1 @@
-<% if @submarine_coordinate != '' && @submarine_coordinate &&  @submarine_direction != '' && @submarine_direction %>
-  <% $game.player_1.place_ship Ship.submarine, @submarine_coordinate, @submarine_direction %>
-  You placed your submarine
-  <a href="/destroyer">now place your destroyer</a>
-
-<% else %>
-  <%=$player1%> here is your board:
-  <pre> <%= $game.own_board_view $game.player_1 %> <pre>
-
-  <form action="/newgame">
-    SUBMARINE:
-    Enter your submarine coordinate (i.e. A1)
-    <input type="text" name="submarine_coordinate">
-    Enter your submarine direction (i.e. vertically)
-    <input type="text" name="submarine_direction">
-
-    <input type="submit" value="Submit">
-  </form>
-<% end %>
+<%= $player1 %> <a href="/placeships">click here to start a new game</a>
