--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,1 @@
-<form action="/">
-  <b>Welcome to Battleships!</b> <br />
-  Player 1, what's your name?
-  <input type="text" name="name">
-  <input type="submit" value="Submit">
-</form>
+<a href='/new_game'>'New Game'</a>
