--- a/views/start_game.erb
+++ b/views/start_game.erb
@@ -1,4 +1,4 @@
-Welcome, <%= session[:name] %>
+Welcome, <%= session[:name1] %> and <%= session[:name2] %>
 <form action="/board">
   <input type="submit" value ="Let's Go!">
 </form>
