--- a/views/board.erb
+++ b/views/board.erb
@@ -13,9 +13,13 @@ Place your ships, <%= session[:name1] %>
   <option value="cruiser">Cruiser</option>
   <option value="battleship">Battleship</option>
   <option value="aircraft_carrier">Aircraft Carrier</option>
-</select>
+</select> <br>
+  <label for="coordinates"> Input coordinates (i.e. A1) </label>
   <input type="text" name="coords">
+  <br>
+  <label for="direction"> Input direction (i.e. horizontally) </label>
   <input type="text" name="direction">
+  <br>
   <input type="submit" value="submit">
 </form>
 </div>
