--- a/views/player2board.erb
+++ b/views/player2board.erb
@@ -19,8 +19,8 @@ Place your ships, <%= session[:name2] %>
   <input type="submit" value="submit">
 </form>
 </div>
-<!-- <div> 
-  <form action="/bomb">
-    <input type="submit" value ="Start Shooting">
+<div> 
+  <form action="/firing">
+    <input type="submit" value ="Go to firing phase">
   </form> 
-</div> -->
+</div>
