Add the switch turn to switch between players and shoot at each others boards.

--- a/views/player2board.erb
+++ b/views/player2board.erb
@@ -20,7 +20,7 @@ Place your ships, <%= session[:name2] %>
 </form>
 </div>
 <div> 
-  <form action="/firing">
+  <form action="/firing1">
     <input type="submit" value ="Go to firing phase">
   </form> 
 </div>
